# walmart-cash-forecast

./: .gitignore  Dockerfile  Makefile  PROCESS.md  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  train.yml
data/: future_march2024.csv  predictions_march2024.csv
notebooks/: 01_eda.ipynb
src/walmart_cash_forecast/: cli.py  config.py
src/walmart_cash_forecast/api/: app.py
src/walmart_cash_forecast/data/: loader.py  validator.py
src/walmart_cash_forecast/features/: aggregator.py  engineer.py  imputer.py
src/walmart_cash_forecast/models/: blender.py  conformal.py
src/walmart_cash_forecast/models/bayesian/: diagnostics.py  model.py
src/walmart_cash_forecast/models/ml/: model.py
src/walmart_cash_forecast/optimization/: denomination.py  newsvendor.py
src/walmart_cash_forecast/pipelines/: prediction.py  training.py
src/walmart_cash_forecast/stats/: decomposition.py  distribution.py  payday.py  reporter.py  stationarity.py
stats_report/: stats_summary.json
tests/: conftest.py
tests/integration/: test_pipelines.py
tests/unit/: test_aggregator.py  test_api.py  test_bayesian.py  test_blender.py  test_config.py  test_conformal.py  test_denomination.py  test_distribution.py  test_engineer.py  test_imputer.py  test_loader.py  test_ml_model.py  test_newsvendor.py  test_payday.py  test_reporter.py  test_stationarity.py  test_validator.py
