[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "walmart-cash-forecast"
version = "0.1.0"
description = "Daily cash change forecasting for Walmart Mexico stores"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pymc>=5.0",
    "arviz>=0.17",
    "lightgbm>=4.0",
    "optuna>=3.0",
    "scikit-learn>=1.3",
    "pulp>=2.7",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "typer>=0.9",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.scripts]
walmart-forecast = "walmart_cash_forecast.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.6",
    "pandas-stubs>=2.0",
    "httpx>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/walmart_cash_forecast"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/walmart_cash_forecast --cov-report=term-missing"
